--- a/recipes/greek-salad.html
+++ b/recipes/greek-salad.html
@@ -7,5 +7,48 @@
   </head>
   <body>
     <h1>Greek Salad</h1>
+    <img src="../img/greek-salad.jpg" alt="Bowl with a colorful salad" />
+    <h2>Description</h2>
+    <p>
+      This easy Greek salad recipe is a flavorful, refreshing summer side dish! If you make it ahead
+      for a gathering, save a few mint leaves to add right before serving.
+    </p>
+    <h2>Ingredients</h2>
+    <h3>Dressing</h3>
+    <ul>
+      <li>¼ cup extra-virgin olive oil</li>
+      <li>3 tablespoons red wine vinegar</li>
+      <li>1 garlic clove, minced</li>
+      <li>½ teaspoon dried oregano, more for sprinkling</li>
+      <li>¼ teaspoon Dijon mustard</li>
+      <li>¼ teaspoon sea salt</li>
+      <li>Freshly ground black pepper</li>
+    </ul>
+    <h3>For the salad</h3>
+    <ul>
+      <li>1 English cucumber, cut lengthwise, seeded, and sliced ¼-inch thick</li>
+      <li>1 green bell pepper, chopped into 1-inch pieces</li>
+      <li>2 cups halved cherry tomatoes</li>
+      <li>5 ounces feta cheese, cut into ½ inch cubes*</li>
+      <li>⅓ cup thinly sliced red onion</li>
+      <li>⅓ cup pitted Kalamata olives</li>
+      <li>⅓ cup fresh mint leaves</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>
+        Make the dressing: In a small bowl, whisk together the olive oil, vinegar, garlic, oregano,
+        mustard, salt, and several grinds of pepper.
+      </li>
+      <li>
+        On a large platter, arrange the cucumber, green pepper, cherry tomatoes, feta cheese, red
+        onions, and olives. Drizzle with the dressing and very gently toss. Sprinkle with a few
+        generous pinches of oregano and top with the mint leaves. Season to taste and serve.
+      </li>
+    </ol>
+    <h2>Notes</h2>
+
+    <p>*Feta in brine is best for this recipe.</p>
+    <p>All credits go to <a href="https://www.loveandlemons.com/greek-salad/">Love & Lemons</a>.</p>
   </body>
 </html>
