--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/greek-salad.html">Greek Salad</a>
+    <a href="./recipes/waldorf-salad.html">Classic Waldorf Salad</a>
   </body>
 </html>
