--- a/recipes/waldorf-salad.html
+++ b/recipes/waldorf-salad.html
@@ -7,5 +7,42 @@
   </head>
   <body>
     <h1>Classic Waldorf Salad</h1>
+    <img src="../img/waldorf-salad.jpg" alt="A bowl full of colorful salad" />
+    <h2>Description</h2>
+    <p>
+      Crunchy with crisp apples, celery and toasted nuts, this easy Waldorf salad is a classic
+      recipe perfect for a crowd any time of year.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>2 cups diced tart apples, or 2 apples</li>
+      <li>1 tablespoon sugar</li>
+      <li>2 teaspoons lemon juice</li>
+      <li>1 cup diced celery</li>
+      <li>1 cup grapes, halved</li>
+      <li>1/2 cup toasted walnuts or pecans, roughly chopped</li>
+      <li>1/2 cup whipping cream, whipped</li>
+      <li>1/4 cup mayonnaise</li>
+      <li>1/2 teaspoon kosher salt</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>
+        Add the diced apples to a large mixing bowl and sprinkle with the sugar and lemon juice.
+        Toss to coat. Add the celery, grapes, and nuts.
+      </li>
+      <li>
+        In another bowl, whip the whipping cream until peaks form, then gently fold in the
+        mayonnaise. Fold into the apple mixture and season with the kosher salt. Taste and adjust
+        the seasoning to your liking. Chill for 1 hour or overnight. Serve by itself or on a lettuce
+        leaf.
+      </li>
+    </ol>
+    <h2>Notes</h2>
+    <p>Instead of whipping cream, substitute 2 tablespoons plain Greek yogurt or sour cream.</p>
+    <p>
+      All credits go to
+      <a href="https://www.foodiecrush.com/classic-waldorf-salad/">FoodieCrush.</a>
+    </p>
   </body>
 </html>
