Add cobb-salad.html and edit index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>Odin Recipes</h1>
     <a href="./recipes/greek-salad.html">Greek Salad</a>
     <a href="./recipes/waldorf-salad.html">Classic Waldorf Salad</a>
+    <a href="./recipes/cobb-salad.html">Cobb Salad</a>
   </body>
 </html>
