Add content to cobb-salad.html

--- a/recipes/cobb-salad.html
+++ b/recipes/cobb-salad.html
@@ -6,5 +6,88 @@
   </head>
   <body>
     <h1>Cobb Salad</h1>
+    <img src="../img/cobb-salad.jpg" alt="A bowl with a colorful salad" />
+    <h2>Description</h2>
+    <p>
+      Loaded to the max with bite size tender rotisserie chicken pieces, super
+      flavorful crispy bacon, vibrantly tasty red onion, rich eggs, creamy
+      avocado, bold blue cheese, and lightly sweet tomatoes.
+    </p>
+    <h2>Ingredients</h2>
+    <h3>
+      Vinaigrette Dressing (or use
+      <a href="https://www.cookingclassy.com/ranch-dressing-recipe/">Ranch</a>)
+    </h3>
+    <ul>
+      <li>2/3 cup olive oil</li>
+      <li>2 Tbsp red wine vinegar</li>
+      <li>2 Tbsp lemon juice</li>
+      <li>2 tsp dijon mustard</li>
+      <li>1 tsp honey</li>
+      <li>1 tsp garlic</li>
+      <li>1/2 tsp each salt and freshly ground black pepper</li>
+    </ul>
+    <h3>Salad</h3>
+    <ul>
+      <li>8 slices bacon</li>
+      <li>4 large eggs</li>
+      <li>1 large head romaine lettuce, chopped into bite size pieces</li>
+      <li>2 1/2 cups cooked rotisserie chicken, chopped</li>
+      <li>1 1/2 cups grape tomatoes, halved</li>
+      <li>1/2 small red onion, thinly sliced (1/3 cup)</li>
+      <li>1 large avocado, diced</li>
+      <li>
+        3 oz blue cheese crumbled, or 1 cup shredded cheddar cheese (we prefer
+        cheddar)
+      </li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>
+        For the bacon: Preheat oven to 400 degrees. Line a rimmed 18 by 13-inch
+        baking sheet with aluminum foil.
+      </li>
+      <li>
+        Lay bacon strips in a single layer on the baking sheet. Bake in
+        preheated oven until crisp, about 12 - 20 minutes (bake time varies
+        based on thickness of bacon)
+      </li>
+      <li>Drain on paper towels, then chop.</li>
+      <li>
+        For the eggs: Add 1-inch of water to a 4 quart pot or saucepan. Bring to
+        a boil over medium-high heat.
+      </li>
+      <li>
+        Add eggs, cover with lid and let cook 14 minutes. Transfer to a bowl of
+        ice water right away. Let rest 15 minutes, then peel eggs and chop.
+      </li>
+      <li>
+        Prepare salad: Layer lettuce into a large salad bowl or among five
+        serving plates. Top with bacon, eggs, tomatoes, onions, avocado and blue
+        cheese.
+      </li>
+      <li>Whisk dressing again then pour over salad and serve.</li>
+    </ol>
+    <h2>Notes</h2>
+    <ul>
+      <li>Use a chilled dressing for a refreshing salad.</li>
+      <li>
+        Rinse chopped lettuce leaves well then run through a salad spinner to
+        dry well so dressing sticks to lettuce.
+      </li>
+      <li>
+        Wait to add dressing until ready to serve so lettuce doesn't wilt.
+      </li>
+      <li>
+        Don't chop avocado until ready to serve as it will start to brown.
+      </li>
+      <li>
+        For less harsh red onion rinse after chopping under water and drain.
+      </li>
+    </ul>
+    <p>
+      All credits go to
+      <a href="https://www.cookingclassy.com/cobb-salad/">Cooking Classy</a>.
+    </p>
   </body>
 </html>
