--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/greek-salad.html">Greek Salad</a>
-    <a href="./recipes/waldorf-salad.html">Classic Waldorf Salad</a>
-    <a href="./recipes/cobb-salad.html">Cobb Salad</a>
+    <ul>
+      <li><a href="./recipes/greek-salad.html">Greek Salad</a></li>
+      <li><a href="./recipes/waldorf-salad.html">Classic Waldorf Salad</a></li>
+      <li><a href="./recipes/cobb-salad.html">Cobb Salad</a></li>
+    </ul>
   </body>
 </html>
