Add Return to main menu to all recipes

--- a/recipes/cobb-salad.html
+++ b/recipes/cobb-salad.html
@@ -89,5 +89,6 @@
       All credits go to
       <a href="https://www.cookingclassy.com/cobb-salad/">Cooking Classy</a>.
     </p>
+    <a href="../index.html">Return to main menu</a>
   </body>
 </html>
